--- a/wdd130/index.html
+++ b/wdd130/index.html
@@ -10,9 +10,9 @@
         <h1>Welcome to WDD130 Web Projects</h1>
         <nav>
             <a href="wwr/index.html">White Water Rafting Website</a>
-            <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
+            <a href="google.com">White Water Rafting Siteplan</a>
             <a href="positioning.html">Positioning Activity</a>
-            <a href="#"> Personal Website</a>
+            <a href="#">Personal Website</a>
             <a href="#">Personal Siteplan</a>
         </nav>
         <p>Adam Sheridan - WWD130</p>
