--- a/wwr/index.html
+++ b/wwr/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <a>
-            <img class="logo" src="images/logo.png" alt="Dry Oar Logo">
+            <img class="logo" src="images/whitewaterrafting.png" alt="Whitewater Rafting Logo">
         </a>
         <nav>
             <a href="index.html">Home</a>
