--- a/byui.html
+++ b/byui.html
@@ -2,6 +2,7 @@
 <html>
     <head>
             <title>BYUI Page</title>
+            <link href="styles/byui.css" rel="stylesheet">
     </head>
     <body>
         <header>
