--- a/byui.html
+++ b/byui.html
@@ -7,7 +7,7 @@
     <body>
         <header>
             <nav>
-                <a href="index.html">Home</a>
+                <a id="active" href="index.html">Home</a>
                 <a href="https://www.churchofjesuschrist.org">Church Of Jesus Christ</a>
                 <a href="https://www.churchofjesuschrist.org/temples">Temples</a>
                 <a href="https://www.churchofjesuschrist.org/study/scriptures">Scriptures</a>
@@ -16,8 +16,10 @@
             <main>
                 <h1>My Favorite University</h1>
                 <img src="aboutme/images/BeachPicWharf.jpg"
-                alt="BYUI Campus" width="300"> 
-                <p>BYUI is a great place to learn and grow.</p>
+                alt="BYUI Campus" width="300">
+                <p class="main-para">
+                    BYUI is a great place to learn and grow.
+                </p>
             </main>
             <footer>
                 <p>My First Web Page 2022 &copy</p>
