--- a/wwr/index.html
+++ b/wwr/index.html
@@ -22,7 +22,7 @@
         <div id="hero-box">
             <img id="hero-img" src="images/hero.png" alt="people enjoying white water rafting">
         </div>
-        <section id="hero-img">
+        <section id="hero-msg">
             <h1 class="home-title">Have An Adventure</h1>
             <h4>Make Memories with Whitewater Rafting </h4>
             <div class='button-box'>
