--- a/wwr/index.html
+++ b/wwr/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id="content">
         <header>
-            <a>
+            <a id="logo_link" href="index.html">
                 <img class="logo" src="images/whitewaterrafting.png" alt="Whitewater Rafting Logo">
             </a>
             <nav>
@@ -34,18 +34,18 @@
         </div>
         <main class="home-grid">
             <section class="rivers-card">
-                <img class="riverforest" src="images/rivers.jpg" alt="river in forest">
-                <img class="river" src="images/river_icon.png" alt="river icon">
+                <img class="card-img" src="images/rivers.jpg" alt="river in forest">
+                <img class="icon" src="images/river_icon.png" alt="river icon">
                 <h2>Rivers</h2>
             </section>
             <section class="camping-card">
-                <img class="camping" src="images/camping.jpg" alt="tent in mountains">
-                <img class="fire" src="images/fire_icon.png" alt="fire icon">
+                <img class="card-img" src="images/camping.jpg" alt="tent in mountains">
+                <img class="icon" src="images/fire_icon.png" alt="fire icon">
                 <h2>Camping</h2>
             </section>
             <section class="rapids-card">
-                <img class="boat" src="images/rapids.jpg" alt="rafting boat">
-                <img class="oars" src="images/oars.png" alt="oars icon">
+                <img class="card-img" src="images/rapids.jpg" alt="rafting boat">
+                <img class="icon" src="images/oars.png" alt="oars icon">
                 <h2>Rapids</h2>
             </section>
             <div id="background"></div>
@@ -61,14 +61,14 @@
             <h3><a href="site-plan-rafting.html">Site Plan</a></h3>
             <h3><a href="contactus.html">Contact Us</a></h3>
             <div class="social">
-                <a href="https://facebook.com">
-                    <img src="images/facebook.png" target="_blank" alt="fb icon">
+                <a href="https://facebook.com" target="_blank">
+                    <img src="images/facebook.png" alt="fb icon">
                 </a>
-                <a href="https://twitter.com">
-                    <img src="images/twitter.png" target="_blank" alt="twitter icon">
+                <a href="https://twitter.com" target="_blank">
+                    <img src="images/twitter.png" alt="twitter icon">
                 </a>
-                <a href="https://instagram.com">
-                    <img src="images/instagram.png" target="_blank" alt="instagram icon">
+                <a href="https://instagram.com" target="_blank">
+                    <img src="images/instagram.png" alt="instagram icon">
                 </a>
             </div>
         </footer>
