--- a/tips/site-plan.html
+++ b/tips/site-plan.html
@@ -9,9 +9,9 @@
 
   <body>
     <header>
-      <h1>[Site name] Site Plan</h1>
-      <h2>FirstName LastName</h2>
-      <h2>WDD 130-[section]</h2>
+      <h1>United Procrastinators Association</h1>
+      <h2>Adam Sheridan</h2>
+      <h2>WDD 130-3</h2>
       <!-- In the header above, add the name or your site, your name and class number. For example if you are in section 3 you would put WDD 130.03 -->
     </header>
     <main>
@@ -20,17 +20,24 @@
       <hr>
       <h2>Overview</h2>
       <h3>Purpose</h3>
-      <p>[Your purpose here]</p>  <!-- change this -->
+      <p>	When life gets in the way we tend to put necessary tasks on the backburner. As the due date comes the task must be completed quickly.
+         Oftentimes the consequences are dire, and there isn’t much space for error. We’ve all experienced this at one time or another, 
+        and if you’re anything like me it’s chronic. That’s why I’ve created the United Procrastinators Association. 
+        The UPA’s website is to help educate fellow procrastinators on how they can put off their to-do-list in the most efficient way possible. 
+        Are you a procrastinator? Do you find yourself failing to finish strong? Tips to help are only one click away!</p>  <!-- change this -->
 
 
       <h3>Audience</h3>
-      <p>[Your audience here]</p>  <!-- change this -->
+      <p>This website is made for anyone who has a habit of procrastinating and needs help getting assignments done on time and productively. 
+        If you have a desire to put your best work out in a short amount of time then the United Procrastinators Association is here to help you.
+      Anyone is welcome and all are encouraged to try out our tips for their next project reguardless of whether you are in high school, college,
+       or in your profession.</p>  <!-- change this -->
 
       <hr>
       <h2>Branding</h2>
       <h3>Website Logo</h3>
       <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-      <img src="#" alt="Logo image">
+      <img src="images\united_procrastinators_association.png" alt="Logo image">
       <hr>
       <h2>
         Style Guide
@@ -50,7 +57,7 @@
       <table class="colors">
         <tr><th>Primary</th><th>Secondary</th><th>Accent 1</th><th>Accent 2</th></tr>
         <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
-        <tr><td class="primary">[#396E94]</td><td class="secondary">[#E7C24F]</td><td class="accent1">[#A43312]</td><td class="accent2"></td></tr>
+        <tr><td class="primary">#610321</td><td class="secondary">#140107</td><td class="accent1">#7d324b</td><td class="accent2">WHITE</td></tr>
       </table>
 
       <!-- ------------------------Step 9------------------------------ -->
@@ -61,10 +68,10 @@
       <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Why did you choose what you did?  Make sure to review the list of web safe fonts at W3Schools.org as a starting point.  Think also about which of your colors above you might use for background and font colors. -->
 
       <h4>
-        Heading Font: [Font Name here]  <!-- change this -->
+        Heading Font: Playfair Display SC  <!-- change this -->
       </h4>
       <h4>
-        Paragraph Font: [Font Name here]  <!-- change this -->
+        Paragraph Font: Open Sans  <!-- change this -->
       </h4>
       <h3>
         Normal paragraph example
