--- a/tips/site-plan.html
+++ b/tips/site-plan.html
@@ -131,29 +131,42 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+        There are many instances of where people have been able to complete their procrastinated work before the assigned deadline thanks
+         to the insights and tips from the United Procrastinators Association. Due to the calculated formula that we have created these people
+          are able to live their best lives as well as accomplish other important tasks. As the wise Edward J. Stieglitz once said “... in the
+           end it's not the years in your life that count; it's the life in your years”. We only have a limited amount of time here on Earth,
+            and what matters most is that we use it wisely. We pride ourselves in being able to enable people to make the most of that time that
+             they have. The application of our tips and tricks will allow anyone to save more time for the more important and enjoyable things
+              in life. Whether you value time spent with family, putting more time in at the gym, relaxing at the pool, or anything else we can
+               help you relish more of it. Here are the testimonials of these people and how the UPA has changed their lives.
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="images\family.webp" alt="image of family">
+        <img src="images\hourglass.jpg" alt="image for homepage">
 
       </ul>
       <h3>[Page 2]</h3>
       <p>
-        [Written copy for the Page 2 here]
+        Procrastination can look like a variety of things. It can be as simple as taking a quick nap or as extravagant as going on a vacation or
+         to a party. There is not anything inherently wrong with these activities on their own, but when it comes to meeting deadlines it’s
+          important that they do not stop you from getting tasks done. In many cases these activities add to your ability to function at your
+           best level, and therefore, it can be used to finish assignments in a short amount of time. This section of the United Procrastinators
+            Association website will give you helpful tips on how you can make procrastination work in your favor.
       </p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img src="images\gym.webp" alt="image for page">
+        <img src="images\party.webp" alt="image for page">
 
       </ul>
       <h3>[Page 3]</h3>
       <p>
-        [Written copy for the Page 3 here]
+        There are many factors that go into any given project or task regardless of whether it is given to you by your boss or self assigned.
+         The biggest principle behind what we do here at UPA is efficiency. Here you will find necessary tips on how you can bring yourself into
+          the appropriate frame of mind, eliminate distractions when it’s time to work, and complete a task quickly without error.
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img src="images\college.jpg" alt="image for page3">
+        <img src="images\focus.png" alt="image for page3" width="50%">
 
       </ul>
       <hr>
