--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -94,8 +94,8 @@
     <h3>Navigation</h3>
     <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. -->
     <nav>
-      <a href="#">Home</a>
-      <a href="#">Page2</a>
+      <a href="index.html">Home</a>
+      <a href="information.html">Information</a>
       <a href="#">Contact Us</a>
     </nav>
     <hr />
@@ -103,7 +103,7 @@
     <div class="sitemap">
       <div class="sm-home">Home</div>
       <div class="sm-page2">
-        [Page2]
+        [Information]
         <!-- this page will have a name later -->
       </div>
       <div class="sm-page3">Contact Us</div>
