--- a/wwr/information.html
+++ b/wwr/information.html
@@ -23,8 +23,9 @@
         <div id="wideriver">
             <img id="wideriver-image" src="images\river-wide2.jpg" alt="wide river">
         </div>
-        <section class="river-info">
+        <div class="river-info">
             <h1>Rivers</h1>
+            <img class="river_pic_1" src="images\river_pic_1.jpg" alt="river pic 1">
             <h2>Main Fork of the Salmon River, Idaho</h2>
             <p>Nestled deep in the Frank Church Wilderness of No Return winds the Salmon river. The Salmon was given the nickname long ago as the
                  River of No Return by the people living near it because of the number of folks that came to visit and fell so in love with the 
@@ -34,12 +35,15 @@
                  class I-IV. The Salmon is one of the longest undammed rivers in the United States. As a free flowing river the water is higher, 
                  faster, and colder in the early summer and lower, slower, and warmer in the late summer. There are good rapids all summer...but 
                  families with children who like to swim tend to appreciate the late summer's slower, warmer water more.</p>
+            <img class="river_pic_2" src="images\river_pic_2.jpg" alt="river pic 2">
             <h2>Desolation and Gray Canyon, Utah</h2>
             <p>Winding through canyons in central Utah, in some of the most desolate land anywhere, the Green river flows towards the mighty Colorado
                  river and the sea. High grey stone cliffs, beautiful desert scenery, and great rapids have made this run famous. This 84-mile trip
                   runs from from Sand Wash to Swaseys Rapid (just outside Green River Utah) and boasts outstanding scenery, interesting geologic
                    formations, evidence of prehistoric and historic human activity, and great whitewater opportunities.<br>Desolation is rated a
-                    Class II/III and is usually done in 6 days<br>Desolation Canyon has been recognized as a National Landmark.  This designation is based on the uniqueness and rich history that the canyon tells.</p>
+                Class II/III and is usually done in 6 days<br>Desolation Canyon has been recognized as a National Landmark.  This designation 
+                is based on the uniqueness and rich history that the canyon tells.</p>
+            <img class="river_pic_3" src="images\river_pic_3.jpg" alt="river pic 3">
             <h2>Grand Canyon, Arizona</h2>
             <p>This is the grand daddy of all canyons and the grand daddy of all river trips. You will never forget your visit to the Grand Canyon.<br>
                 Grand Canyon river rafting combines world-class whitewater with breathtaking scenery to make one truly unforgettable river experience.
@@ -47,7 +51,7 @@
                   river.<br>CLASS I - X: The Grand Canyon uses a unique river rating scale. The rapids in the Canyon are technically rated
                    I - X ( 1 - 10) to accommodate such a wide variety of rapids and river variances. However, most people are familiar with the
                     regular I - V river rating scale, so we often refer to both.</p>
-        </section>
+            </div>
         <hr />
         <div class="faq">
             <h1>FAQ</h1>
@@ -100,5 +104,66 @@
             <h2>How far in advance should I book my trip?</h2>
             <p><br/>If you have specific dates you need, we recommend booking a year in advance. If you can be more flexible 6 months in 
                 advance is usually sufficient.</p>
+        </div>
+        <hr />
+        <div class="blog">
+            <h1>Blog</h1>
+            <h2>Next Summer booking open now!</h2>
+            <p>Make sure to reserve your date now, we have limited runs on each river and they go fast. If you have only certain dates that you 
+                can get away you should book now.</p>
+            <h2>Highlights from the past season</h2>
+            <p>What an incredible season we have had. We celebrated our 50th year of running trips down the Grand Canyon. This year we ran 
+                36 trips down the Grand Canyon introducing over 800 people to one of our favorite places on earth. We trained 4 new guides 
+                and welcomed them to our family. The season started off with some chilly weather in the early season, but our guests braved 
+                the cold and loved every minute of their trip (show pictures). Later the temperatures soared reaching highs of 120 F in the 
+                Grand canyon and 95 on the Salmon. We didn't have any trouble getting people in the water at those temperatures.</p>
+                <img class="river_pic_1" src="images\group_photo.jpg" alt="river pic 1">
+            <h2>Encounters in the wild!</h2>
+            <p>Our trips are all run in some of the most remote areas of the United States. We share these areas with lots of critters both 
+                large and small. Here are some tips on what to do if you should find yourself face to face with one.<br>Scorpions: There 
+                are hundreds of varieties of scorpions, most of them being harmless. There are, however, a handful of them 
+                that can be dangerous and even potentially lethal. Scorpions can be found in almost every ecosystem and are very adaptable 
+                to their environment. The scorpion that calls Phantom Ranch in the Grand Canyon home is the Bark Scorpion, the most venomous 
+                in the United States. Do not worry though, the bark scorpions are only lethal to their prey and luckily humans are not on 
+                that list!<br>They spend the day hiding and crawl out at night to hunt. They will eat crickets, moths, spiders and other insects. 
+                Many compare their sting to an intense bee sting. Relief can be found with ice, aspirin and time.<br>When in the canyon, 
+                pay attention to where you are walking at night. Always wear your shoes or sandals. Always have a light with you to see 
+                where you are going. Never try to capture a scorpion and if you get stung, see your guide immediately.<br>Big horn sheep: 
+                For many people, bighorn sheep symbolize the rugged mountain west. It is one of two species of wild sheep in North 
+                America. It’s compact body is muscular with chocolate brown fur. Most weigh 160-250 lbs. They have exceptional 
+                vision, hearing and smell that helps them detect and avoid predators.<br>Their large curved horns can weigh up to 30 
+                lbs. Females also have horns but they are short with a slight curvature. Horns are used as tools for eating and 
+                fighting.<br>If you encounter a big horn sheep, don’t agitate it. The park service asks that you stay 100 feet away from 
+                big game animals. Leave them enough room for escape if they feel threatened.</p>
+            </div>
+        <hr />
+        <div class="RatesAndDates">
+            <h1>Rates/Dates</h1>
+            <p>This page will give information about what trips are available, when trips are available, and how much they cost.<br>Prices 
+                and Dates for our 2016 Season<br>GRAND CANYON THREE-NIGHT TRIP: 2016 Pricing and Dates Grand Canyon 3 night trips: $1,475 
+                April 30 May 13, 20, 27, 30 June 3, 10, 17, 24, 28 July 1, 8, 15, 22, 29 August 5, 12, 19, 26 September 9, 17<br>GRAND 
+                CANYON SIX-NIGHT TRIP: (The dates listed will be the date that you spend the night in Marble Canyon. The launch date is 
+                the following day.) 2016 Pricing and Dates Grand Canyon 6 night trips: $2,550 April 25 May 8, 15, 22, 25, 29 June 5, 12, 19, 
+                23, 26 July 3, 10, 17, 24, 31 August 7, 14, 21 September 4, 12<br>Salmon River 5 night trip (The dates listed will be the 
+                date that you spend the night in Salmon. The launch date is the following day.) 2016 Pricing and Dates Regular Rate: $1,540 
+                Trip Dates June 3, 10, 17, 24 July 2<br>Desolation 6 night Trip 2016 Pricing and Dates Regular Rate: $1,790 Trip Dates July 
+                10, 18, 26 Aug 3, 11, 19, 27 Sept 4</p>
+        </div>
+        <footer>
+            <h3>Adam's White Water Rafting &copy; 2022 - Adam Sheridan</h3>
+            <h3><a href="site-plan-rafting.html">Site Plan</a></h3>
+            <h3><a href="contactus.html">Contact Us</a></h3>
+            <div class="social">
+                <a href="https://facebook.com" target="_blank">
+                    <img src="images/facebook.png" alt="fb icon">
+                </a>
+                <a href="https://twitter.com" target="_blank">
+                    <img src="images/twitter.png" alt="twitter icon">
+                </a>
+                <a href="https://instagram.com" target="_blank">
+                    <img src="images/instagram.png" alt="instagram icon">
+                </a>
+            </div>
+        </footer>
 </body>
 </html>
