--- a/tips/site-plan.html
+++ b/tips/site-plan.html
@@ -94,8 +94,8 @@
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
         <a href="#">Home</a>
-        <a href="#">Page2</a>
-        <a href="#">Page3</a>
+        <a href="#">Page 1</a>
+        <a href="#">Page 2</a>
       </nav>
       <hr>
       <h2>
@@ -106,10 +106,10 @@
           Home
         </div>
         <div class="sm-page2">
-          [Page2] <!-- change this -->
+          Page 1 <!-- change this -->
         </div>
         <div class="sm-page3">
-          [Page3]  <!-- change this -->
+          Page 2  <!-- change this -->
         </div>
 
         <div class="top">
@@ -145,7 +145,7 @@
         <img src="images\hourglass.jpg" alt="image for homepage">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>Page 1</h3>
       <p>
         Procrastination can look like a variety of things. It can be as simple as taking a quick nap or as extravagant as going on a vacation or
          to a party. There is not anything inherently wrong with these activities on their own, but when it comes to meeting deadlines it’s
@@ -153,18 +153,18 @@
            best level, and therefore, it can be used to finish assignments in a short amount of time. This section of the United Procrastinators
             Association website will give you helpful tips on how you can make procrastination work in your favor.
       </p>
-      <p>Images for the Page 2</p>
+      <p>Images for the Page 1</p>
         <img src="images\gym.webp" alt="image for page">
         <img src="images\party.webp" alt="image for page">
 
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>Page 2</h3>
       <p>
         There are many factors that go into any given project or task regardless of whether it is given to you by your boss or self assigned.
          The biggest principle behind what we do here at UPA is efficiency. Here you will find necessary tips on how you can bring yourself into
           the appropriate frame of mind, eliminate distractions when it’s time to work, and complete a task quickly without error.
       </p>
-      <p>Images for the Page 3</p>
+      <p>Images for the Page 2</p>
         <img src="images\college.jpg" alt="image for page3">
         <img src="images\focus.png" alt="image for page3" width="50%">
 
@@ -178,21 +178,21 @@
 
       <h3>Home</h3>
       <p>         
-        [Any additional details about home that the wireframe does not make clear]
+        This page introduces the reader to the website and it's basic purpose.
       </p>
-      <img src="#" alt="home page wireframe">
+      <img src="images\personal_homepage_wireframe.png" width="30%" alt="home page wireframe">
 
-      <h3>[Page 2]</h3>
+      <h3>Page 1</h3>
       <p>         
-        [Any additional details about page 2 that the wireframe does not make clear]
+        This page will give the reader tips on how they can work more effectively.
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <img src="images\personal_website_wireframe_page_1.png" width="30%" alt="page 1 wireframe">
 
-      <h3>[Page 3]</h3>
+      <h3>Page 2</h3>
       <p>         
-        [Any additional details about page 3 that the wireframe does not make clear]
+        This page will give the reader tips on how to spend their time so that they are prepared to work at the most optimal level.
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <img src="images\personal_website_wireframe_page_2.png" width="30%" alt="page 2 wireframe">
     </main>
   </body>
 
