--- a/wwr/contactus.html
+++ b/wwr/contactus.html
@@ -15,7 +15,10 @@
         padding: 1em;
         border: 1px solid #CCC;
         border-radius: 1em;
+        margin-top: 150px;
+        margin-bottom: 150px;
       }
+      
       
       ul {
         list-style: none;
