--- a/tips/finishing_effectiviely.html
+++ b/tips/finishing_effectiviely.html
@@ -20,20 +20,27 @@
             </nav>
         </header>
         <main>
-            <p>There are many instances of where people have been able to complete their procrastinated work before the assigned deadline 
-                thanks to the insights and tips from the United Procrastinators Association. Due to the calculated formula that we have 
-                created these people are able to live their best lives as well as accomplish other important tasks. As the wise Edward J. 
-                Stieglitz once said “... in the end it's not the years in your life that count; it's the life in your years”. We only have 
-                a limited amount of time here on Earth, and what matters most is that we use it wisely. We pride ourselves in being able to 
-                enable people to make the most of that time that they have. The application of our tips and tricks will allow anyone to save 
-                more time for the more important and enjoyable things in life. Whether you value time spent with family, putting more time in 
-                at the gym, relaxing at the pool, or anything else we can help you relish more of it. Here are the testimonials of these 
-                people and how the UPA has changed their lives.</p>
-            <div id="family-pic">
-                <img id="family-pic-image" src="images\family.webp" alt="family">
+            <h1>Finishing Effectively</h1>
+            <p>There are many factors that go into any given project or task regardless of whether it is given to you by your boss or 
+                self assigned. The biggest principle behind what we do here at UPA is efficiency. Here you will find necessary tips on 
+                how you can bring yourself into the appropriate frame of mind, eliminate distractions when it’s time to work, and 
+                complete a task quickly without error.
+            </p>
+            <hr />
+            <h1>Tips</h1>
+            <p>Take Advantage of Resources Available- If you're given resources in order to complete a task then it is important to make 
+                the most of them. Anything that will make the job easier will be beneficial to use.
+            </p>
+            <p>Find Other People to Work With- If you find other people to work with they can help you out of problems that you're having 
+                with your work or project.</p>
+            <div id="college">
+                <img id="college-image" src="images\college.jpg" alt="college picture">
             </div>
-            <div id="hourglass">
-                <img id="hourglass-image" src="images\hourglass.jpg" alt="hourglass">
+            <p>Focus on One Thing at a Time- This can reduce stress that comes from trying to juggle multiple things at one time.</p>
+            <p>Make Small but Manageable Goals- Making goals that are attainable can help you work quickly and effectively without 
+                losing motivation</p>
+            <div id="focus">
+                <img id="focus-image" src="images\focus.png" alt="focus picture">
             </div>
         </main>
         <footer>
