--- a/tips/site-plan.html
+++ b/tips/site-plan.html
@@ -93,9 +93,9 @@
       </h3>
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
-        <a href="#">Home</a>
-        <a href="#">Page 1</a>
-        <a href="#">Page 2</a>
+        <a href="index.html">Home</a>
+        <a href="procrastination_tips.html">Page 1</a>
+        <a href="finishing_effectiviely.html">Page 2</a>
       </nav>
       <hr>
       <h2>
