--- a/tips/index.html
+++ b/tips/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Site Homepage</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
+
+<body>
     <div id="content">
         <header>
-
             <nav>
                 <a href="index.html">Home</a>
                 <a href="procrastination_tips.html">Procrastination Tips</a>
@@ -19,20 +22,28 @@
                 <a href="site-plan.html">Site Plan</a>
             </nav>
         </header>
-        <main>
-            <p>There are many instances of where people have been able to complete their procrastinated work before the assigned deadline 
-                thanks to the insights and tips from the United Procrastinators Association. Due to the calculated formula that we have 
-                created these people are able to live their best lives as well as accomplish other important tasks. As the wise Edward J. 
-                Stieglitz once said “... in the end it's not the years in your life that count; it's the life in your years”. We only have 
-                a limited amount of time here on Earth, and what matters most is that we use it wisely. We pride ourselves in being able to 
-                enable people to make the most of that time that they have. The application of our tips and tricks will allow anyone to save 
-                more time for the more important and enjoyable things in life. Whether you value time spent with family, putting more time in 
-                at the gym, relaxing at the pool, or anything else we can help you relish more of it. Here are the testimonials of these 
-                people and how the UPA has changed their lives.</p>
-            <div id="family-pic">
-                <img id="family-pic-image" src="images\family.webp" alt="family">
+        <main class="home-grid">
+            <div id="summary">
+                <p>There are many instances of where people have been able to complete their procrastinated work before
+                    the assigned deadline
+                    thanks to the insights and tips from the United Procrastinators Association. Due to the calculated
+                    formula that we have
+                    created these people are able to live their best lives as well as accomplish other important tasks.
+                    As the wise Edward J.
+                    Stieglitz once said “... in the end it's not the years in your life that count; it's the life in
+                    your years”. We only have
+                    a limited amount of time here on Earth, and what matters most is that we use it wisely. We pride
+                    ourselves in being able to
+                    enable people to make the most of that time that they have. The application of our tips and tricks
+                    will allow anyone to save
+                    more time for the more important and enjoyable things in life. Whether you value time spent with
+                    family, putting more time in
+                    at the gym, relaxing at the pool, or anything else we can help you relish more of it. Here are the
+                    testimonials of these
+                    people and how the UPA has changed their lives.</p>
             </div>
-            <div id="hourglass">
+            <div id="pictures">
+                <img id="family-pic-image" src="images\family.webp" alt="family">
                 <img id="hourglass-image" src="images\hourglass.jpg" alt="hourglass">
             </div>
         </main>
@@ -54,4 +65,5 @@
         </footer>
     </div>
 </body>
+
 </html>
