--- a/tips/index.html
+++ b/tips/index.html
@@ -18,7 +18,7 @@
                 <a id="logo_link" href="index.html">
                     <img class="logo" src="images\united_procrastinators_association.png" alt="Personal Site Logo">
                 </a>
-                <a href="finishing_effectiviely.html">Finising Effectively</a>
+                <a href="finishing_effectiviely.html">Finishing Effectively</a>
                 <a href="site-plan.html">Site Plan</a>
             </nav>
         </header>
