--- a/tips/finishing_effectiviely.html
+++ b/tips/finishing_effectiviely.html
@@ -1,64 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Site Homepage</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
-    <div id="content">
-        <header>
-
-            <nav>
-                <a href="index.html">Home</a>
-                <a href="procrastination_tips.html">Procrastination Tips</a>
-                <a id="logo_link" href="index.html">
-                    <img class="logo" src="images\united_procrastinators_association.png" alt="Personal Site Logo">
-                </a>
-                <a href="finishing_effectiviely.html">Finising Effectively</a>
-                <a href="site-plan.html">Site Plan</a>
-            </nav>
-        </header>
-        <main>
+<div id="tips2">
+    <header>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="procrastination_tips.html">Procrastination Tips</a>
+            <a id="logo_link" href="index.html">
+                <img class="logo" src="images\united_procrastinators_association.png" alt="Personal Site Logo">
+            </a>
+            <a href="finishing_effectiviely.html">Finising Effectively</a>
+            <a href="site-plan.html">Site Plan</a>
+        </nav>
+    </header>
+    <main>
+        <div id="finishtips">
             <h1>Finishing Effectively</h1>
-            <p>There are many factors that go into any given project or task regardless of whether it is given to you by your boss or 
-                self assigned. The biggest principle behind what we do here at UPA is efficiency. Here you will find necessary tips on 
-                how you can bring yourself into the appropriate frame of mind, eliminate distractions when it’s time to work, and 
+            <p>There are many factors that go into any given project or task regardless of whether it is given to you by
+                your boss or
+                self assigned. The biggest principle behind what we do here at UPA is efficiency. Here you will find
+                necessary tips on
+                how you can bring yourself into the appropriate frame of mind, eliminate distractions when it’s time to
+                work, and
                 complete a task quickly without error.
             </p>
             <hr />
             <h1>Tips</h1>
-            <p>Take Advantage of Resources Available- If you're given resources in order to complete a task then it is important to make 
+            <p>Take Advantage of Resources Available- If you're given resources in order to complete a task then it is
+                important to make
                 the most of them. Anything that will make the job easier will be beneficial to use.
             </p>
-            <p>Find Other People to Work With- If you find other people to work with they can help you out of problems that you're having 
+            <p>Find Other People to Work With- If you find other people to work with they can help you out of problems
+                that
+                you're having
                 with your work or project.</p>
             <div id="college">
                 <img id="college-image" src="images\college.jpg" alt="college picture">
             </div>
-            <p>Focus on One Thing at a Time- This can reduce stress that comes from trying to juggle multiple things at one time.</p>
-            <p>Make Small but Manageable Goals- Making goals that are attainable can help you work quickly and effectively without 
+            <p>Focus on One Thing at a Time- This can reduce stress that comes from trying to juggle multiple things at
+                one
+                time.</p>
+            <p>Make Small but Manageable Goals- Making goals that are attainable can help you work quickly and
+                effectively
+                without
                 losing motivation</p>
             <div id="focus">
                 <img id="focus-image" src="images\focus.png" alt="focus picture">
             </div>
-        </main>
-        <footer>
-            <h3>United Procrastinators Association &copy; 2022 - Adam Sheridan</h3>
-            <h3><a href="site-plan.html">Site Plan</a></h3>
-            <h3><a href="contactus.html">Contact Us</a></h3>
-            <div class="social">
-                <a href="https://facebook.com" target="_blank">
-                    <img src="images/facebook.png" alt="fb icon">
-                </a>
-                <a href="https://twitter.com" target="_blank">
-                    <img src="images/twitter.png" alt="twitter icon">
-                </a>
-                <a href="https://instagram.com" target="_blank">
-                    <img src="images/instagram.png" alt="instagram icon">
-                </a>
-            </div>
-        </footer>
-    </div>
+        </div>
+    </main>
+    <footer>
+        <h3>United Procrastinators Association &copy; 2022 - Adam Sheridan</h3>
+        <h3><a href="site-plan.html">Site Plan</a></h3>
+        <h3><a href="contactus.html">Contact Us</a></h3>
+        <div class="social">
+            <a href="https://facebook.com" target="_blank">
+                <img src="images/facebook.png" alt="fb icon">
+            </a>
+            <a href="https://twitter.com" target="_blank">
+                <img src="images/twitter.png" alt="twitter icon">
+            </a>
+            <a href="https://instagram.com" target="_blank">
+                <img src="images/instagram.png" alt="instagram icon">
+            </a>
+        </div>
+    </footer>
+</div>
 </body>
+
 </html>
