--- a/tips/procrastination_tips.html
+++ b/tips/procrastination_tips.html
@@ -1,66 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Site Homepage</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
-    <div id="content">
-        <header>
-
-            <nav>
-                <a href="index.html">Home</a>
-                <a href="procrastination_tips.html">Procrastination Tips</a>
-                <a id="logo_link" href="index.html">
-                    <img class="logo" src="images\united_procrastinators_association.png" alt="Personal Site Logo">
-                </a>
-                <a href="finishing_effectiviely.html">Finising Effectively</a>
-                <a href="site-plan.html">Site Plan</a>
-            </nav>
-        </header>
-        <main>
+<div id="tips1">
+    <header>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="procrastination_tips.html">Procrastination Tips</a>
+            <a id="logo_link" href="index.html">
+                <img class="logo" src="images\united_procrastinators_association.png" alt="Personal Site Logo">
+            </a>
+            <a href="finishing_effectiviely.html">Finising Effectively</a>
+            <a href="site-plan.html">Site Plan</a>
+        </nav>
+    </header>
+    <main>
+        <div id="thingstips">
             <h1>Procrastination Tips</h1>
-            <p>Procrastination can look like a variety of things. It can be as simple as taking a quick nap or as extravagant as going on a 
-                vacation or to a party. There is not anything inherently wrong with these activities on their own, but when it comes to 
-                meeting deadlines it’s important that they do not stop you from getting tasks done. In many cases these activities add to 
-                your ability to function at your best level, and therefore, it can be used to finish assignments in a short amount of 
-                time. This section of the United Procrastinators Association website will give you helpful tips on how you can make 
+            <p>Procrastination can look like a variety of things. It can be as simple as taking a quick nap or as
+                extravagant as going on a
+                vacation or to a party. There is not anything inherently wrong with these activities on their own, but
+                when it comes to
+                meeting deadlines it’s important that they do not stop you from getting tasks done. In many cases these
+                activities add to
+                your ability to function at your best level, and therefore, it can be used to finish assignments in a
+                short amount of
+                time. This section of the United Procrastinators Association website will give you helpful tips on how
+                you can make
                 procrastination work in your favor.
             </p>
             <hr />
             <h1>Tips</h1>
-            <p>Grab Some Food- Eating a good healthy snack can help you be in the right mindset to accomplish whatever task you're faced with.</p>
-            <p>Go to the Gym- Going to the gym can be a good way to keep your body running and working optimally. This is important because 
+            <p>Grab Some Food- Eating a good healthy snack can help you be in the right mindset to accomplish whatever
+                task you're faced with.</p>
+            <p>Go to the Gym- Going to the gym can be a good way to keep your body running and working optimally. This
+                is important because
                 it will keep you in a productive state for when you decide to finish your assignment.</p>
             <div id="gym">
                 <img id="gym-image" src="images\gym.webp" alt="gym">
             </div>
-            <p>Hanging out with Friends- Wholesome times with friends can eliminate stress and help you stay emotionally happy. It's hard to 
+            <p>Hanging out with Friends- Wholesome times with friends can eliminate stress and help you stay emotionally
+                happy. It's hard to
                 focus when you are stressed or unhappy. Friends can change that.
             </p>
-            <p>Take a Nap- When you aren't rested you're less likely to be productive. It can be hard to work when you need to recharge. 
+            <p>Take a Nap- When you aren't rested you're less likely to be productive. It can be hard to work when you
+                need to recharge.
                 Taking a quick nap can give you the chance to clear your mind and get some energy.</p>
             <div id="party">
                 <img id="party-image" src="images\party.webp" alt="party">
             </div>
-        </main>
-        <footer>
-            <h3>United Procrastinators Association &copy; 2022 - Adam Sheridan</h3>
-            <h3><a href="site-plan.html">Site Plan</a></h3>
-            <h3><a href="contactus.html">Contact Us</a></h3>
-            <div class="social">
-                <a href="https://facebook.com" target="_blank">
-                    <img src="images/facebook.png" alt="fb icon">
-                </a>
-                <a href="https://twitter.com" target="_blank">
-                    <img src="images/twitter.png" alt="twitter icon">
-                </a>
-                <a href="https://instagram.com" target="_blank">
-                    <img src="images/instagram.png" alt="instagram icon">
-                </a>
-            </div>
-        </footer>
-    </div>
+        </div>
+    </main>
+    <footer>
+        <h3>United Procrastinators Association &copy; 2022 - Adam Sheridan</h3>
+        <h3><a href="site-plan.html">Site Plan</a></h3>
+        <h3><a href="contactus.html">Contact Us</a></h3>
+        <div class="social">
+            <a href="https://facebook.com" target="_blank">
+                <img src="images/facebook.png" alt="fb icon">
+            </a>
+            <a href="https://twitter.com" target="_blank">
+                <img src="images/twitter.png" alt="twitter icon">
+            </a>
+            <a href="https://instagram.com" target="_blank">
+                <img src="images/instagram.png" alt="instagram icon">
+            </a>
+        </div>
+    </footer>
+</div>
 </body>
+
 </html>
