--- a/tips/index.html
+++ b/tips/index.html
@@ -8,21 +8,54 @@
     <title>Personal Site Homepage</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
-
 <body>
     <div id="content">
         <header>
             <nav>
                 <a href="index.html">Home</a>
                 <a href="procrastination_tips.html">Procrastination Tips</a>
-                <a id="logo_link" href="index.html">
-                    <img class="logo" src="images\united_procrastinators_association.png" alt="Personal Site Logo">
-                </a>
+                <!-- Trigger the Modal -->
+<img id="myImg" src="images\united_procrastinators_association.png" alt="Personal Site Logo" style="width:100%;max-width:300px">
+
+<!-- The Modal -->
+<div id="myModal" class="modal">
+
+  <!-- The Close Button -->
+  <span class="close">&times;</span>
+
+  <!-- Modal Content (The Image) -->
+  <img class="modal-content" id="img01">
+
+  <!-- Modal Caption (Image Text) -->
+  <div id="caption"></div>
+</div>
+                <script>
+                    // Get the modal
+var modal = document.getElementById("myModal");
+
+// Get the image and insert it inside the modal - use its "alt" text as a caption
+var img = document.getElementById("myImg");
+var modalImg = document.getElementById("img01");
+var captionText = document.getElementById("caption");
+img.onclick = function(){
+  modal.style.display = "block";
+  modalImg.src = this.src;
+  captionText.innerHTML = this.alt;
+}
+
+// Get the <span> element that closes the modal
+var span = document.getElementsByClassName("close")[0];
+
+// When the user clicks on <span> (x), close the modal
+span.onclick = function() {
+  modal.style.display = "none";
+}
+                </script>
                 <a href="finishing_effectiviely.html">Finishing Effectively</a>
                 <a href="site-plan.html">Site Plan</a>
             </nav>
         </header>
-        <main class="home-grid">
+        <main>
             <div id="summary">
                 <p>There are many instances of where people have been able to complete their procrastinated work before
                     the assigned deadline
