--- a/tips/procrastination_tips.html
+++ b/tips/procrastination_tips.html
@@ -37,21 +37,21 @@
             </p>
             <hr />
             <h1>Tips</h1>
-            <p>Grab Some Food- Eating a good healthy snack can help you be in the right mindset to accomplish whatever
-                task you're faced with.</p>
-            <p>Go to the Gym- Going to the gym can be a good way to keep your body running and working optimally. This
+            <li>Grab Some Food- Eating a good healthy snack can help you be in the right mindset to accomplish whatever
+                task you're faced with.</li>
+            <li>Go to the Gym- Going to the gym can be a good way to keep your body running and working optimally. This
                 is important because
-                it will keep you in a productive state for when you decide to finish your assignment.</p>
+                it will keep you in a productive state for when you decide to finish your assignment.</li>
             <div id="gym">
-                <img id="gym-image" src="images\gym.webp" alt="gym">
+                <img id="gym-image" src="images\gym.webp" alt="gym" width:40px>
             </div>
-            <p>Hanging out with Friends- Wholesome times with friends can eliminate stress and help you stay emotionally
+            <li>Hanging out with Friends- Wholesome times with friends can eliminate stress and help you stay emotionally
                 happy. It's hard to
                 focus when you are stressed or unhappy. Friends can change that.
-            </p>
-            <p>Take a Nap- When you aren't rested you're less likely to be productive. It can be hard to work when you
+            </li>
+            <li>Take a Nap- When you aren't rested you're less likely to be productive. It can be hard to work when you
                 need to recharge.
-                Taking a quick nap can give you the chance to clear your mind and get some energy.</p>
+                Taking a quick nap can give you the chance to clear your mind and get some energy.</li>
             <div id="party">
                 <img id="party-image" src="images\party.webp" alt="party">
             </div>
