--- a/tips/finishing_effectiviely.html
+++ b/tips/finishing_effectiviely.html
@@ -33,26 +33,26 @@
             </p>
             <hr />
             <h1>Tips</h1>
-            <p>Take Advantage of Resources Available- If you're given resources in order to complete a task then it is
+            <li>Take Advantage of Resources Available- If you're given resources in order to complete a task then it is
                 important to make
                 the most of them. Anything that will make the job easier will be beneficial to use.
-            </p>
-            <p>Find Other People to Work With- If you find other people to work with they can help you out of problems
+            </li>
+            <li>Find Other People to Work With- If you find other people to work with they can help you out of problems
                 that
                 you're having
-                with your work or project.</p>
+                with your work or project.</li>
             <div id="college">
-                <img id="college-image" src="images\college.jpg" alt="college picture">
+                <img id="college-image" src="images\college.jpg" alt="college picture"  width="100%">
             </div>
-            <p>Focus on One Thing at a Time- This can reduce stress that comes from trying to juggle multiple things at
+            <li>Focus on One Thing at a Time- This can reduce stress that comes from trying to juggle multiple things at
                 one
-                time.</p>
-            <p>Make Small but Manageable Goals- Making goals that are attainable can help you work quickly and
+                time.</li>
+            <li>Make Small but Manageable Goals- Making goals that are attainable can help you work quickly and
                 effectively
                 without
-                losing motivation</p>
+                losing motivation</li>
             <div id="focus">
-                <img id="focus-image" src="images\focus.png" alt="focus picture">
+                <img id="focus-image" src="images\focus.png" alt="focus picture" width="100%">
             </div>
         </div>
     </main>
