--- a/tips/procrastination_tips.html
+++ b/tips/procrastination_tips.html
@@ -43,7 +43,7 @@
                 is important because
                 it will keep you in a productive state for when you decide to finish your assignment.</li>
             <div id="gym">
-                <img id="gym-image" src="images\gym.webp" alt="gym" width:40px>
+                <img id="gym-image" src="images\gym.webp" alt="gym">
             </div>
             <li>Hanging out with Friends- Wholesome times with friends can eliminate stress and help you stay emotionally
                 happy. It's hard to
