--- a/tips/finishing_effectiviely.html
+++ b/tips/finishing_effectiviely.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,7 +13,7 @@
             <a href="index.html">Home</a>
             <a href="procrastination_tips.html">Procrastination Tips</a>
             <a id="logo_link" href="index.html">
-                <img class="logo" src="images\united_procrastinators_association.png" alt="Personal Site Logo">
+                <img class="logo" src="images/united_procrastinators_association.png" alt="Personal Site Logo">
             </a>
             <a href="finishing_effectiviely.html">Finising Effectively</a>
             <a href="site-plan.html">Site Plan</a>
@@ -33,7 +32,8 @@
             </p>
             <hr />
             <h1>Tips</h1>
-            <li>Take Advantage of Resources Available- If you're given resources in order to complete a task then it is
+            <ul>
+                <li>Take Advantage of Resources Available- If you're given resources in order to complete a task then it is
                 important to make
                 the most of them. Anything that will make the job easier will be beneficial to use.
             </li>
@@ -41,18 +41,21 @@
                 that
                 you're having
                 with your work or project.</li>
+            </ul>
             <div id="college">
-                <img id="college-image" src="images\college.jpg" alt="college picture"  width="100%">
+                <img id="college-image" src="images/college.jpg" alt="college picture" class="content-image">
             </div>
-            <li>Focus on One Thing at a Time- This can reduce stress that comes from trying to juggle multiple things at
+            <ul>
+                <li>Focus on One Thing at a Time- This can reduce stress that comes from trying to juggle multiple things at
                 one
                 time.</li>
-            <li>Make Small but Manageable Goals- Making goals that are attainable can help you work quickly and
+                <li>Make Small but Manageable Goals- Making goals that are attainable can help you work quickly and
                 effectively
                 without
                 losing motivation</li>
+            </ul>
             <div id="focus">
-                <img id="focus-image" src="images\focus.png" alt="focus picture" width="100%">
+                <img id="focus-image" src="images/focus.png" alt="focus picture" class="content-image">
             </div>
         </div>
     </main>
