--- a/tips/index.html
+++ b/tips/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,7 +14,7 @@
                 <a href="index.html">Home</a>
                 <a href="procrastination_tips.html">Procrastination Tips</a>
                 <!-- Trigger the Modal -->
-<img id="myImg" src="images\united_procrastinators_association.png" alt="Personal Site Logo" style="width:100%;max-width:300px">
+<img id="myImg" src="images/united_procrastinators_association.png" alt="Personal Site Logo" style="width:100%;max-width:300px">
 
 <!-- The Modal -->
 <div id="myModal" class="modal">
@@ -76,8 +75,8 @@ span.onclick = function() {
                     people and how the UPA has changed their lives.</p>
             </div>
             <div id="pictures">
-                <img id="family-pic-image" src="images\family.webp" alt="family">
-                <img id="hourglass-image" src="images\hourglass.jpg" alt="hourglass">
+                <img id="family-pic-image" src="images/family.webp" alt="family">
+                <img id="hourglass-image" src="images/college.jpg" alt="hourglass">
             </div>
         </main>
         <footer>
