--- a/tips/procrastination_tips.html
+++ b/tips/procrastination_tips.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,7 +13,7 @@
             <a href="index.html">Home</a>
             <a href="procrastination_tips.html">Procrastination Tips</a>
             <a id="logo_link" href="index.html">
-                <img class="logo" src="images\united_procrastinators_association.png" alt="Personal Site Logo">
+                <img class="logo" src="images/united_procrastinators_association.png" alt="Personal Site Logo">
             </a>
             <a href="finishing_effectiviely.html">Finising Effectively</a>
             <a href="site-plan.html">Site Plan</a>
@@ -37,23 +36,28 @@
             </p>
             <hr />
             <h1>Tips</h1>
-            <li>Grab Some Food- Eating a good healthy snack can help you be in the right mindset to accomplish whatever
+            <ul>
+                <li>Grab Some Food- Eating a good healthy snack can help you be in the right mindset to accomplish whatever
+                <li>Grab Some Food- Eating a good healthy snack can help you be in the right mindset to accomplish whatever
                 task you're faced with.</li>
-            <li>Go to the Gym- Going to the gym can be a good way to keep your body running and working optimally. This
+                <li>Go to the Gym- Going to the gym can be a good way to keep your body running and working optimally. This
                 is important because
                 it will keep you in a productive state for when you decide to finish your assignment.</li>
+            </ul>
             <div id="gym">
-                <img id="gym-image" src="images\gym.webp" alt="gym">
+                <img id="gym-image" src="images/gym.webp" alt="gym" class="content-image">
             </div>
-            <li>Hanging out with Friends- Wholesome times with friends can eliminate stress and help you stay emotionally
+            <ul>
+                <li>Hanging out with Friends- Wholesome times with friends can eliminate stress and help you stay emotionally
                 happy. It's hard to
                 focus when you are stressed or unhappy. Friends can change that.
-            </li>
-            <li>Take a Nap- When you aren't rested you're less likely to be productive. It can be hard to work when you
+                </li>
+                <li>Take a Nap- When you aren't rested you're less likely to be productive. It can be hard to work when you
                 need to recharge.
                 Taking a quick nap can give you the chance to clear your mind and get some energy.</li>
+            </ul>
             <div id="party">
-                <img id="party-image" src="images\party.webp" alt="party">
+                <img id="party-image" src="images/party.webp" alt="party" class="content-image">
             </div>
         </div>
     </main>
